--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,10 @@ spring:
       ddl-auto: update
     show-sql: true
 
-  redis:
-    host: localhost
-    port: 6379
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 cache:
-  type: redis
+ type: redis
