--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,9 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session-data-redis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-storage-blob</artifactId>
+            <version>12.23.0</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
