--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,10 @@ spring:
 
 cache:
  type: redis
+
+azure:
+  storage:
+    account-name: ${AZURE_STORAGE_ACCOUNT_NAME}
+    container-name: ${AZURE_STORAGE_CONTAINER_NAME}
+    connection-string: ${AZURE_STORAGE_CONNECTION_STRING}
+    key: ${AZURE_STORAGE_KEY:azure-storage-key}
